migrate more tests to Cycles